# ChangeLog for net-p2p/ed2k_hash
# Copyright 2000-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-p2p/ed2k_hash/ChangeLog,v 1.8 2004/09/03 00:29:22 malc Exp $

  02 Sep 2004; Malcolm Lashley <malc@gentoo.org> ed2k_hash-0.4.0.ebuild:
  Fixed hashing on 64bit (amd64) and keyworded - closes bug #62587

  01 Jul 2004; Jon Hood <squinky86@gentoo.org> ed2k_hash-0.4.0.ebuild:
  virtual/glibc needs changed to virtual/libc; stable on ppc

  02 Jun 2004; Jon Hood <squinky86@gentoo.org> -ed2k_hash-0.3.3.ebuild,
  ed2k_hash-0.4.0.ebuild:
  stable on x86; cleanups

  30 Apr 2004; David Holm <dholm@gentoo.org> ed2k_hash-0.4.0.ebuild:
  Added to ~ppc.

*ed2k_hash-0.4.0 (29 Apr 2004)

  29 Apr 2004; Jon Hood <squinky86@gentoo.org> ed2k_hash-0.3.3.ebuild,
  +ed2k_hash-0.4.0.ebuild:
  version bump, mark 0.3.3 as stable on x86

*ed2k_hash-0.3.3 (23 Oct 2003)

  23 Oct 2003; Heinrich Wendel <lanius@gentoo.org> ed2k_hash-0.3.3.ebuild:
  initial revision, thx to Sven Wegener <sven.wegener@stealer.net> #31520
