@@ -1,6 +1,8 @@
 # Copyright 1999-2004 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/net-p2p/ed2k_hash/Attic/ed2k_hash-0.4.0.ebuild,v 1.6 2004/09/03 00:29:22 malc Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-p2p/ed2k_hash/Attic/ed2k_hash-0.4.0.ebuild,v 1.7 2004/11/17 23:36:17 squinky86 Exp $
+
+inherit eutils
 
 DESCRIPTION="Tool for generating eDonkey2000 links"
 HOMEPAGE="http://ed2k-tools.sourceforge.net/${PN}.shtml"
@@ -11,8 +13,6 @@ SLOT="0"
 KEYWORDS="x86 ppc ~amd64"
 IUSE=""
 DEPEND="virtual/libc"
-
-inherit eutils
 
 src_unpack() {
 	unpack ${P}.tar.gz
